--- a/plugin.xml
+++ b/plugin.xml
@@ -1,17 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<plugin id="cordova-plugin-network-type-advanced" version="1.0.0"
+<plugin id="cordova-plugin-network-type-advanced" 
+        version="1.0.0"
         xmlns="http://apache.org/cordova/ns/plugins/1.0"
         xmlns:android="http://schemas.android.com/apk/res/android">
-    <name>NetworkTypeAdvanced</name>
 
-    <js-module src="www/NetworkType.js" name="NetworkTypeAdvanced">
+    <name>NetworkTypeAdvanced</name>
+    <description>Expose cellular signal strength (dBm) to JS</description>
+    <license>MIT</license>
+
+    <js-module name="NetworkTypeAdvanced" src="www/NetworkType.js">
         <clobbers target="window.NetworkTypeAdvanced" />
     </js-module>
 
-    <platform name="android">
-        <config-file target="AndroidManifest.xml" parent="/*">
-            <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-        </config-file>
-        <source-file src="src/android/NetworkTypePlugin.java" target-dir="src/com/moblink/networktype" />
-    </platform>
+<platform name="android">
+    <config-file target="AndroidManifest.xml" parent="/*">
+        <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    </config-file>
+
+    <!-- ⬇️ IMPORTANTE: vínculo entre JS e Java -->
+    <feature name="NetworkTypeAdvanced">
+        <param name="android-package" value="com.moblink.networktype.NetworkTypePlugin" />
+    </feature>
+
+    <source-file src="src/android/NetworkTypePlugin.java" target-dir="src/com/moblink/networktype" />
+</platform>
 </plugin>
